<resources>
    <string name="app_name">Tala</string>
    <string name="login_email_hint">Username</string>
    <string name="login_title">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loan_list_title">Tala Loans</string>
    <string name="content_description_media">image</string>
    <string name="chip_paid">Paid</string>
    <string name="chip_due">Due</string>
    <string name="chip_aproved">Aproved</string>
    <string name="dialog_accept">OK</string>
    <string name="tv_welcome">Welcome %1$s !</string>
    <string name="share_app">Invite friends, earn money</string>
    <string name="send_message">View FAQs or send us a message</string>
    <string name="loan_information">Loan Information</string>
    <string name="status_info_title">Status:</string>
    <string name="level_info_title">Level:</string>
    <string name="creation_date_info_title">Creation Date:</string>
    <string name="locale_info_title">Locale:</string>
    <string name="amount_info_title">Amount:</string>
    <string name="due_date_info_title">Due date:</string>
</resources>